rydde etter oppfolginag avasluttet til oppfolingsperiode toppic (#464)